[workspace]
resolver = "2"
members = ["anchor-yard", "anchor-yard-macros", "anchor-yard-core"]

[workspace.metadata]
description = "A simple and effective performance profiling and world snapshot tool for the shipyard ECS framework."

[workspace.dependencies]
shipyard = { version = "0.8", features = ["serde1", "proc"] }
serde = { version = "1.0", features = ["derive" ] }
bytes = "1.0"
anyhow = "1.0"
bincode = { version = "2.0", features = ["serde", "alloc"] }
quote = "1.0"
syn = { version = "2.0.104", features = ["full"] }
once_cell = "1.21.3"
