[package]
name = "anchor-yard-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Npixel-Eclipse/anchor-yard"
description = "A simple and effective performance profiling and world snapshot tool for the shipyard ECS framework."

[dependencies]
shipyard = { workspace = true, features = ["serde1", "proc"] }
serde = { workspace = true, features = ["derive" ] }
bytes = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
once_cell = { workspace = true }
