[package]
name = "anchor-yard"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/Npixel-Eclipse/anchor-yard"
keywords = ["shipyard", "ecs", "performance", "profiling", "snapshot"]
categories = ["development-tools", "development-tools::profiling", "game-development"]
description = "A simple and effective performance profiling and world snapshot tool for the shipyard ECS framework."

[dependencies]
anchor-yard-macros = { path = "../anchor-yard-macros", version = "0.1.0" }
anchor-yard-core = { path = "../anchor-yard-core", version = "0.1.0" }

[dev-dependencies]
shipyard = { workspace = true }
serde = { workspace = true }

[[example]]
name = "basic_usage"
required-features = []
